[TTS][refactor] Part 4 - nn.collections.tts.g2p.modules
Signed-off-by: Xuesong Yang <1646669+XuesongYang@users.noreply.github.com>

--- a/tutorials/tts/FastPitch_MixerTTS_Training.ipynb
+++ b/tutorials/tts/FastPitch_MixerTTS_Training.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nemo.collections.tts.g2p.modules import EnglishG2p\n",
+    "from nemo.collections.common.g2p.en_us_arpabet import EnglishG2p\n",
     "from nemo.collections.tts.data.tts_dataset import TTSDataset\n",
     "from nemo_text_processing.text_normalization.normalize import Normalizer\n",
     "from nemo.collections.common.tokenizers.text_to_speech.tts_tokenizers import EnglishPhonemesTokenizer, EnglishCharsTokenizer"
